# roguecpp

./: .clang-format  CMakeLists.txt
src/: Game.cpp  Game.hpp  Texture.cpp  Texture.hpp  main.cpp  platform.hpp
src/prelude/: Error.hpp  Option.hpp  Threadpool.cpp  Threadpool.hpp  macros.hpp  panic.cpp  panic.hpp
